Prevent Covers button from shrinking on hover
* The previous border rule was only needed because an outline was not
used. It can safely be removed.

Ref: https://jira.greenpeace.org/browse/PLANET-6008

--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -110,7 +110,6 @@ a --link-- {
   &:active {
     color: $link-color;
     text-decoration: underline;
-    border: none;
   }
 
   &:visited {
